学发音，字母大通关，显身手
学发音，字母大通关，显身手

--- a/src/html/44_study_letter_结对子_3.html
+++ b/src/html/44_study_letter_结对子_3.html
@@ -77,7 +77,7 @@
       <p class="page-title">
         <a href="javascript:;" class="grey-link">课程中心／</a>
         <a href="javascript:;" class="grey-link">同步课程／</a>
-        <a href="javascript:;" class="normal-link">单词初识</a>
+        <a href="javascript:;" class="normal-link">看字组句</a>
       </p>
       <div class="practice-wp">
         <div class="summary-wp clearfix">
