--- a/src/html/48_pronunciation_学发音.html
+++ b/src/html/48_pronunciation_学发音.html
@@ -79,12 +79,16 @@
               <div class="pronunciation-item pronunciation-item-1">
                 <ul>
                   <li>
-                    <img src="../img/48_fu.png" alt="辅音">
-                    <p>26个辅音</p>
+                    <a href="./48_pronunciation_学发音内页样式_01.html">
+                      <img src="../img/48_fu.png" alt="辅音">
+                      <p>26个辅音</p>
+                    </a>
                   </li>
                   <li>
-                    <img src="../img/48_yuan.png" alt="元音">
-                    <p>18个元音</p>
+                    <a href="./48_pronunciation_学发音内页样式_02.html">
+                      <img src="../img/48_yuan.png" alt="元音">
+                      <p>18个元音</p>
+                    </a>
                   </li>
                 </ul>
                 <div class="pronunciation-tit">
@@ -96,26 +100,36 @@
               <div class="pronunciation-item pronunciation-item-2">
                 <ul>
                   <li>
-                    <img src="../img/48_cyuan.png" alt="长元音">
-                    <p>长元音a_e</p>
+                    <a href="./48_pronunciation_学发音内页样式_01.html">
+                      <img src="../img/48_cyuan.png" alt="长元音">
+                      <p>长元音a_e</p>
+                    </a>
                   </li>
                   <li>
-                    <img src="../img/48_cyuan.png" alt="长元音">
-                    <p>长元音ee</p>
+                    <a href="./48_pronunciation_学发音内页样式_02.html">
+                      <img src="../img/48_cyuan.png" alt="长元音">
+                      <p>长元音ee</p>
+                    </a>
                   </li>
                   <li>
-                    <img src="../img/48_cyuan.png" alt="长元音">
-                    <p>长元音i_e</p>
+                    <a href="./48_pronunciation_学发音内页样式_01.html">
+                      <img src="../img/48_cyuan.png" alt="长元音">
+                      <p>长元音i_e</p>
+                    </a>
                   </li>
                 </ul>
                 <ul>
                   <li>
-                    <img src="../img/48_cyuan.png" alt="长元音">
-                    <p>长元音o_e</p>
+                    <a href="./48_pronunciation_学发音内页样式_02.html">
+                      <img src="../img/48_cyuan.png" alt="长元音">
+                      <p>长元音o_e</p>
+                    </a>
                   </li>
                   <li>
-                    <img src="../img/48_cyuan.png" alt="长元音">
-                    <p>长元音u_e</p>
+                    <a href="./48_pronunciation_学发音内页样式_02.html">
+                      <img src="../img/48_cyuan.png" alt="长元音">
+                      <p>长元音u_e</p>
+                    </a>
                   </li>
                 </ul>
                 <div class="pronunciation-tit">
@@ -127,38 +141,54 @@
               <div class="pronunciation-item pronunciation-item-3">
                 <ul>
                   <li>
-                    <img src="../img/48_pyuan.png" alt="普元音">
-                    <p>普通元音ar</p>
+                    <a href="./48_pronunciation_学发音内页样式_02.html">
+                      <img src="../img/48_pyuan.png" alt="普元音">
+                      <p>普通元音ar</p>
+                    </a>
                   </li>
                   <li>
-                    <img src="../img/48_pyuan.png" alt="普元音">
-                    <p>普通元音or</p>
+                    <a href="./48_pronunciation_学发音内页样式_02.html">
+                      <img src="../img/48_pyuan.png" alt="普元音">
+                      <p>普通元音or</p>
+                    </a>
                   </li>
                   <li>
-                    <img src="../img/48_pyuan.png" alt="普元音">
-                    <p>普通元音ur</p>
+                    <a href="./48_pronunciation_学发音内页样式_02.html">
+                      <img src="../img/48_pyuan.png" alt="普元音">
+                      <p>普通元音ur</p>
+                    </a>
                   </li>
                   <li>
-                    <img src="../img/48_pyuan.png" alt="普元音">
-                    <p>普通元音ow</p>
+                    <a href="./48_pronunciation_学发音内页样式_02.html">
+                      <img src="../img/48_pyuan.png" alt="普元音">
+                      <p>普通元音ow</p>
+                    </a>
                   </li>
                 </ul>
                 <ul>
                   <li>
-                    <img src="../img/48_pyuan.png" alt="普元音">
-                    <p>普通元音oo</p>
+                    <a href="./48_pronunciation_学发音内页样式_01.html">
+                      <img src="../img/48_pyuan.png" alt="普元音">
+                      <p>普通元音oo</p>
+                    </a>
                   </li>
                   <li>
-                    <img src="../img/48_pyuan.png" alt="普元音">
-                    <p>普通元音air</p>
+                    <a href="./48_pronunciation_学发音内页样式_01.html">
+                      <img src="../img/48_pyuan.png" alt="普元音">
+                      <p>普通元音air</p>
+                    </a>
                   </li>
                   <li>
-                    <img src="../img/48_pyuan.png" alt="普元音">
-                    <p>普通元音ear</p>
+                    <a href="./48_pronunciation_学发音内页样式_01.html">
+                      <img src="../img/48_pyuan.png" alt="普元音">
+                      <p>普通元音ear</p>
+                    </a>
                   </li>
                   <li>
-                    <img src="../img/48_pyuan.png" alt="普元音">
-                    <p>普通元音oi</p>
+                    <a href="./48_pronunciation_学发音内页样式_01.html">
+                      <img src="../img/48_pyuan.png" alt="普元音">
+                      <p>普通元音oi</p>
+                    </a>
                   </li>
                 </ul>
                 <div class="pronunciation-tit">
@@ -170,26 +200,36 @@
               <div class="pronunciation-item pronunciation-item-2 pronunciation-item-4">
                 <ul>
                   <li>
-                    <img src="../img/48_dy.png" alt="多音节">
-                    <p>特殊多音节词 1</p>
+                    <a href="./48_pronunciation_学发音内页样式_01.html">
+                      <img src="../img/48_dy.png" alt="多音节">
+                      <p>特殊多音节词 1</p>
+                    </a>
                   </li>
                   <li>
-                    <img src="../img/48_dy.png" alt="多音节">
-                    <p>特殊多音节词 2</p>
+                    <a href="./48_pronunciation_学发音内页样式_01.html">
+                      <img src="../img/48_dy.png" alt="多音节">
+                      <p>特殊多音节词 2</p>
+                    </a>
                   </li>
                   <li>
-                    <img src="../img/48_dy.png" alt="多音节">
-                    <p>特殊多音节词 3</p>
+                    <a href="./48_pronunciation_学发音内页样式_01.html">
+                      <img src="../img/48_dy.png" alt="多音节">
+                      <p>特殊多音节词 3</p>
+                    </a>
                   </li>
                 </ul>
                 <ul>
                   <li>
-                    <img src="../img/48_dy.png" alt="多音节">
-                    <p>特殊多音节词 4</p>
+                    <a href="./48_pronunciation_学发音内页样式_01.html">
+                      <img src="../img/48_dy.png" alt="多音节">
+                      <p>特殊多音节词 4</p>
+                    </a>
                   </li>
                   <li>
-                    <img src="../img/48_dy.png" alt="多音节">
-                    <p>辅音浊化</p>
+                    <a href="./48_pronunciation_学发音内页样式_01.html">
+                      <img src="../img/48_dy.png" alt="多音节">
+                      <p>辅音浊化</p>
+                    </a>
                   </li>
                 </ul>
                 <div class="pronunciation-tit">
