--- a/src/html/27_readText_课文跟读_1.html
+++ b/src/html/27_readText_课文跟读_1.html
@@ -90,7 +90,18 @@
           </div>
           <div class="pent-body">
               <div class="xc-proplay">
-                  <audio class="audioMp3"><source src="../music/2.mp3" type="audio/mp3"></audio>
+                  <audio class="audioMp3list">
+                    <source src="../music/3.mp3" type="audio/mp3">
+                  </audio>
+                  <audio class="audioMp3list">
+                    <source src="../music/2.mp3" type="audio/mp3">
+                  </audio>
+                  <audio class="audioMp3list">
+                    <source src="../music/3.mp3" type="audio/mp3">
+                  </audio>
+                  <audio class="audioMp3list">
+                    <source src="../music/2.mp3" type="audio/mp3">
+                  </audio>
                   <div class="xc-proplay-btns">
                     <img class="xc-proplay-img toogleloop" src="../img/readText-loop.png" alt="暂替">
                     <img class="xc-proplay-img tooglePlay play" src="../img/readText-play.png" alt="播放">
@@ -158,6 +169,46 @@
   </div>
   <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
   <script src="../js/main_xc.js"></script>
+  <script>
+    $(function(){
+      var list = $(".audioMp3list")
+      var len = list.length
+      var now = 0
+      var loop = false
+      $(".tooglePlay").click(function(){
+        if($(this).hasClass('play')){
+          nextplay()
+          $(this).removeClass('play').addClass('pause').attr('src', '../img/readText-play-active.png')
+        }else {
+          list[now].pause()
+          $(this).removeClass('pause').addClass('play').attr('src', '../img/readText-play.png')
+        }
+      })
+      $(".toogleLoop").click(function(){
+        var $this = $(this)
+        if ($this.hasClass('true')) {
+          loop = false
+          $this.removeClass('true').attr('src', '../img/readText-loop.png')
+        } else {
+          loop = true
+          $this.addClass('true').attr('src', '../img/readText-loop-active.png')
+        }
+      })
+
+      function nextplay() {
+        list[now].play()
+        $('.readText-box p').removeClass('active').eq(now).addClass('active')
+        list[now].addEventListener('ended', function () {
+          ++now
+          if(now >= len) {
+            if(!loop) return false
+            now = 0
+          }
+          nextplay()
+        })
+      }
+    })
+  </script>
 </body>
 
 </html>
