--- a/src/html/27_readText_课文跟读_1.html
+++ b/src/html/27_readText_课文跟读_1.html
@@ -184,7 +184,7 @@
           $(this).removeClass('pause').addClass('play').attr('src', '../img/readText-play.png')
         }
       })
-      $(".toogleLoop").click(function(){
+      $(".toogleloop").click(function(){
         var $this = $(this)
         if ($this.hasClass('true')) {
           loop = false
