--- a/src/html/27_readText_课文跟读_1.html
+++ b/src/html/27_readText_课文跟读_1.html
@@ -116,7 +116,7 @@
             <div class="readText-box">
               <p class="readText-item">Are you Helen?</p>
               <p class="readText-item">Yes, I am.</p>
-              <p class="readText-item active">Nice to meet you, too.</p>
+              <p class="readText-item">Nice to meet you, too.</p>
               <p class="readText-item">This was nearly a century before Christopher Columbus first set sail on his journey of discovery to America. This was nearly a century before Christopher Columbus first set sail on his journey of discovery to America.</p>
               <p class="readText-item">Are you Helen?</p>
               <p class="readText-item">Yes, I am.</p>
