--- a/src/html/45_words_学字母.html
+++ b/src/html/45_words_学字母.html
@@ -128,7 +128,7 @@
                       <div class="course-class-item">
                         <div class="course-class-pro">
                           <div class="course-pro-warp">
-                            <div class="course-pro-inner"></div>
+                            <div class="course-pro-inner" style="width: 10%"></div>
                           </div>
                           <div class="course-pro-test">
                             <span>40/</span>56
@@ -150,7 +150,7 @@
                       <div class="course-class-item">
                         <div class="course-class-pro">
                           <div class="course-pro-warp">
-                            <div class="course-pro-inner"></div>
+                            <div class="course-pro-inner" style="width: 20%"></div>
                           </div>
                           <div class="course-pro-test">
                             <span>40/</span>56
@@ -172,7 +172,7 @@
                       <div class="course-class-item">
                         <div class="course-class-pro">
                           <div class="course-pro-warp">
-                            <div class="course-pro-inner"></div>
+                            <div class="course-pro-inner" style="width: 30%"></div>
                           </div>
                           <div class="course-pro-test">
                             <span>40/</span>56
@@ -194,7 +194,7 @@
                       <div class="course-class-item">
                         <div class="course-class-pro">
                           <div class="course-pro-warp">
-                            <div class="course-pro-inner"></div>
+                            <div class="course-pro-inner" style="width: 40%"></div>
                           </div>
                           <div class="course-pro-test">
                             <span>40/</span>56
@@ -220,7 +220,7 @@
                       <div class="course-class-item">
                         <div class="course-class-pro">
                           <div class="course-pro-warp">
-                            <div class="course-pro-inner"></div>
+                            <div class="course-pro-inner" style="width: 50%"></div>
                           </div>
                           <div class="course-pro-test">
                             <span>40/</span>56
@@ -242,7 +242,7 @@
                       <div class="course-class-item">
                         <div class="course-class-pro">
                           <div class="course-pro-warp">
-                            <div class="course-pro-inner"></div>
+                            <div class="course-pro-inner" style="width: 50%"></div>
                           </div>
                           <div class="course-pro-test">
                             <span>40/</span>56
@@ -264,7 +264,7 @@
                       <div class="course-class-item">
                         <div class="course-class-pro">
                           <div class="course-pro-warp">
-                            <div class="course-pro-inner"></div>
+                            <div class="course-pro-inner" style="width: 50%"></div>
                           </div>
                           <div class="course-pro-test">
                             <span>40/</span>56
@@ -286,7 +286,7 @@
                       <div class="course-class-item">
                         <div class="course-class-pro">
                           <div class="course-pro-warp">
-                            <div class="course-pro-inner"></div>
+                            <div class="course-pro-inner" style="width: 50%"></div>
                           </div>
                           <div class="course-pro-test">
                             <span>40/</span>56
@@ -312,7 +312,7 @@
                     <div class="course-class-item">
                       <div class="course-class-pro">
                         <div class="course-pro-warp">
-                          <div class="course-pro-inner"></div>
+                          <div class="course-pro-inner" style="width: 50%"></div>
                         </div>
                         <div class="course-pro-test">
                           <span>40/</span>56
@@ -332,7 +332,7 @@
                     <div class="course-class-item">
                       <div class="course-class-pro">
                         <div class="course-pro-warp">
-                          <div class="course-pro-inner"></div>
+                          <div class="course-pro-inner" style="width: 50%"></div>
                         </div>
                         <div class="course-pro-test">
                           <span>40/</span>56
@@ -352,7 +352,7 @@
                     <div class="course-class-item">
                       <div class="course-class-pro">
                         <div class="course-pro-warp">
-                          <div class="course-pro-inner"></div>
+                          <div class="course-pro-inner" style="width: 50%"></div>
                         </div>
                         <div class="course-pro-test">
                           <span>40/</span>56
@@ -372,7 +372,7 @@
                     <div class="course-class-item">
                       <div class="course-class-pro">
                         <div class="course-pro-warp">
-                          <div class="course-pro-inner"></div>
+                          <div class="course-pro-inner" style="width: 50%"></div>
                         </div>
                         <div class="course-pro-test">
                           <span>40/</span>56
@@ -396,7 +396,7 @@
                     <div class="course-class-item">
                       <div class="course-class-pro">
                         <div class="course-pro-warp">
-                          <div class="course-pro-inner"></div>
+                          <div class="course-pro-inner" style="width: 50%"></div>
                         </div>
                         <div class="course-pro-test">
                           <span>40/</span>56
@@ -416,7 +416,7 @@
                     <div class="course-class-item">
                       <div class="course-class-pro">
                         <div class="course-pro-warp">
-                          <div class="course-pro-inner"></div>
+                          <div class="course-pro-inner" style="width: 50%"></div>
                         </div>
                         <div class="course-pro-test">
                           <span>40/</span>56
@@ -436,7 +436,7 @@
                     <div class="course-class-item">
                       <div class="course-class-pro">
                         <div class="course-pro-warp">
-                          <div class="course-pro-inner"></div>
+                          <div class="course-pro-inner" style="width: 50%"></div>
                         </div>
                         <div class="course-pro-test">
                           <span>40/</span>56
@@ -456,7 +456,7 @@
                     <div class="course-class-item">
                       <div class="course-class-pro">
                         <div class="course-pro-warp">
-                          <div class="course-pro-inner"></div>
+                          <div class="course-pro-inner" style="width: 50%"></div>
                         </div>
                         <div class="course-pro-test">
                           <span>40/</span>56
@@ -480,7 +480,7 @@
                     <div class="course-class-item">
                       <div class="course-class-pro">
                         <div class="course-pro-warp">
-                          <div class="course-pro-inner"></div>
+                          <div class="course-pro-inner" style="width: 50%"></div>
                         </div>
                         <div class="course-pro-test">
                           <span>40/</span>56
@@ -500,7 +500,7 @@
                     <div class="course-class-item">
                       <div class="course-class-pro">
                         <div class="course-pro-warp">
-                          <div class="course-pro-inner"></div>
+                          <div class="course-pro-inner" style="width: 50%"></div>
                         </div>
                         <div class="course-pro-test">
                           <span>40/</span>56
@@ -520,7 +520,7 @@
                     <div class="course-class-item">
                       <div class="course-class-pro">
                         <div class="course-pro-warp">
-                          <div class="course-pro-inner"></div>
+                          <div class="course-pro-inner" style="width: 50%"></div>
                         </div>
                         <div class="course-pro-test">
                           <span>40/</span>56
@@ -540,7 +540,7 @@
                     <div class="course-class-item">
                       <div class="course-class-pro">
                         <div class="course-pro-warp">
-                          <div class="course-pro-inner"></div>
+                          <div class="course-pro-inner" style="width: 50%"></div>
                         </div>
                         <div class="course-pro-test">
                           <span>40/</span>56
@@ -564,7 +564,7 @@
                     <div class="course-class-item">
                       <div class="course-class-pro">
                         <div class="course-pro-warp">
-                          <div class="course-pro-inner"></div>
+                          <div class="course-pro-inner" style="width: 50%"></div>
                         </div>
                         <div class="course-pro-test">
                           <span>40/</span>56
@@ -584,7 +584,7 @@
                     <div class="course-class-item">
                       <div class="course-class-pro">
                         <div class="course-pro-warp">
-                          <div class="course-pro-inner"></div>
+                          <div class="course-pro-inner" style="width: 50%"></div>
                         </div>
                         <div class="course-pro-test">
                           <span>40/</span>56
@@ -604,7 +604,7 @@
                     <div class="course-class-item">
                       <div class="course-class-pro">
                         <div class="course-pro-warp">
-                          <div class="course-pro-inner"></div>
+                          <div class="course-pro-inner" style="width: 50%"></div>
                         </div>
                         <div class="course-pro-test">
                           <span>40/</span>56
@@ -624,7 +624,7 @@
                     <div class="course-class-item">
                       <div class="course-class-pro">
                         <div class="course-pro-warp">
-                          <div class="course-pro-inner"></div>
+                          <div class="course-pro-inner" style="width: 50%"></div>
                         </div>
                         <div class="course-pro-test">
                           <span>40/</span>56
