--- a/src/html/43_study_letter_学字母_1.html
+++ b/src/html/43_study_letter_学字母_1.html
@@ -112,8 +112,8 @@
               </div>
             </div>
             <div class="progress-wp">
-              <div class="progress-ct">
-                <span class="percent">50%</span>
+              <div class="progress-ct" style="width: 20%">
+                <span class="percent">20%</span>
               </div>
             </div>
             <ul class="summary-ul clearfix">
