--- a/src/html/46_test_学后智测智学单词_1.html
+++ b/src/html/46_test_学后智测智学单词_1.html
@@ -144,12 +144,22 @@
       </div>
       <div class="coustom-footer-time">
         <img class="timeImg" src="../img/readText-footer-prv.png" alt="时间">倒计时
-        <span class="time">01:28</span>
+        <span class="time" id="xc-time">01:28</span>
       </div>
     </div>
   </div>
   <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
   <script src="../js/main_xc.js"></script>
+  <script>
+    $(function() {
+      comment.endTime($('#xc-time'), 88, function() {
+        console.log('倒计时结束')
+      })
+      comment.endTime($('.instr-itme'), 88, function() {
+        console.log('倒计时结束了！')
+      })
+    })
+  </script>
 </body>
 
 </html>
