--- a/src/html/12_course_同步课程.html
+++ b/src/html/12_course_同步课程.html
@@ -243,6 +243,7 @@
         </div>
         <div class="course-body">
           <div class="course-body-left">
+            <a href="#">
             <div class="course-body-untiy active">
               <div class="course-untiy-name">Unity</div>
               <div class="course-untiy-imgs">
@@ -251,6 +252,8 @@
                 <span class="img warn"></span>
               </div>
             </div>
+            </a>
+            <a href="#">
             <div class="course-body-untiy">
               <div class="course-untiy-name">Unity</div>
               <div class="course-untiy-imgs">
@@ -259,6 +262,7 @@
                 <span class="img warn re"></span>
               </div>
             </div>
+            </a>
             <div class="course-body-untiy">
               <div class="course-untiy-name">Unity</div>
               <div class="course-untiy-imgs">
