学校，教师前端管理页面
学校，教师前端管理页面

--- a/src/html/schoolmanagement_sales_info.html
+++ b/src/html/schoolmanagement_sales_info.html
@@ -24,6 +24,7 @@
 
 
 
+
   <link rel="stylesheet" href="../css/main_xc.css">
 
 
@@ -73,6 +74,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -264,6 +266,7 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
@@ -278,6 +281,9 @@
             </li>
             <li class="active">详细报表</li>
           </ol>
+          <div class='mt10 xc-clearfix'>
+              <a href="javascript:history.go(-1)" class="btn btn-primary pull-left">返回</a>
+          </div>
         </div>
         <div class="row">
           <div class="col-xs-12">
@@ -324,7 +330,7 @@
                         <td>9999999</td>
                         <td>100%</td>
                         <td>
-                          <a class="btn btn-primary" href="javascript:;">余额明细</button>
+                           <a class="btn btn-primary" href="./schoolmanagement_sales_detial.html">余额明细</button>
                         </td>
                       </tr>
                       <tr>
@@ -344,7 +350,7 @@
                         <td>9999999</td>
                         <td>100%</td>
                         <td>
-                          <a class="btn btn-primary" href="javascript:;">余额明细</button>
+                           <a class="btn btn-primary" href="./schoolmanagement_sales_detial.html">余额明细</button>
                         </td>
                       </tr>
                       <tr>
@@ -364,7 +370,7 @@
                         <td>9999999</td>
                         <td>100%</td>
                         <td>
-                          <a class="btn btn-primary" href="javascript:;">余额明细</button>
+                           <a class="btn btn-primary" href="./schoolmanagement_sales_detial.html">余额明细</button>
                         </td>
                       </tr>
                       <tr>
@@ -384,7 +390,7 @@
                         <td>9999999</td>
                         <td>100%</td>
                         <td>
-                          <a class="btn btn-primary" href="javascript:;">余额明细</button>
+                           <a class="btn btn-primary" href="./schoolmanagement_sales_detial.html">余额明细</button>
                         </td>
                       </tr>
                       <tr>
@@ -404,7 +410,7 @@
                         <td>9999999</td>
                         <td>100%</td>
                         <td>
-                          <a class="btn btn-primary" href="javascript:;">余额明细</button>
+                           <a class="btn btn-primary" href="./schoolmanagement_sales_detial.html">余额明细</button>
                         </td>
                       </tr>
                       <tr>
@@ -424,7 +430,7 @@
                         <td>9999999</td>
                         <td>100%</td>
                         <td>
-                          <a class="btn btn-primary" href="javascript:;">余额明细</button>
+                           <a class="btn btn-primary" href="./schoolmanagement_sales_detial.html">余额明细</button>
                         </td>
                       </tr>
                       <tr>
@@ -444,7 +450,7 @@
                         <td>9999999</td>
                         <td>100%</td>
                         <td>
-                          <a class="btn btn-primary" href="javascript:;">余额明细</button>
+                           <a class="btn btn-primary" href="./schoolmanagement_sales_detial.html">余额明细</button>
                         </td>
                       </tr>
                       <tr>
@@ -464,7 +470,7 @@
                         <td>9999999</td>
                         <td>100%</td>
                         <td>
-                          <a class="btn btn-primary" href="javascript:;">余额明细</button>
+                           <a class="btn btn-primary" href="./schoolmanagement_sales_detial.html">余额明细</button>
                         </td>
                       </tr>
                       <tr>
@@ -484,7 +490,7 @@
                         <td>9999999</td>
                         <td>100%</td>
                         <td>
-                          <a class="btn btn-primary" href="javascript:;">余额明细</button>
+                           <a class="btn btn-primary" href="./schoolmanagement_sales_detial.html">余额明细</button>
                         </td>
                       </tr>
                       <tr>
@@ -504,7 +510,7 @@
                         <td>9999999</td>
                         <td>100%</td>
                         <td>
-                          <a class="btn btn-primary" href="javascript:;">余额明细</button>
+                           <a class="btn btn-primary" href="./schoolmanagement_sales_detial.html">余额明细</button>
                         </td>
                       </tr>
                     </tbody>
@@ -543,6 +549,7 @@
 
 
 
+
               </div>
             </div>
           </div>
@@ -556,6 +563,7 @@
       <span>&copy; 2018 - 智厢逢</span>
     </footer>
     <!-- endbuild -->
+
 
 
 
@@ -590,6 +598,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
