--- a/src/html/teachermanagement_sales.html
+++ b/src/html/teachermanagement_sales.html
@@ -19,6 +19,7 @@
   <link rel="stylesheet" href="../css/app.css" id="maincss">
   <link rel="stylesheet" href="../css/theme-e.css">
   <!-- endbuild -->
+  <link rel="stylesheet" href="../css/main_xc.css">
 
 
 
@@ -70,6 +71,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -245,6 +247,7 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
@@ -258,7 +261,7 @@
                 <form class="text-right form-lineH">
                   <div class="row">
                     <div class="form-group col-sm-3">
-                      <label class="col-sm-4">教师：</label>
+                      <label class="col-sm-4 xc-nowrap">检索学校：</label>
                       <div class="col-sm-8">
                         <input type="tel" name="" class="form-control" placeholder="请输入教师编号或教师姓名">
                       </div>
@@ -393,6 +396,7 @@
 
 
 
+
               </div>
             </div>
           </div>
@@ -406,6 +410,7 @@
       <span>&copy; 2018 - 智厢逢</span>
     </footer>
     <!-- endbuild -->
+
 
 
 
@@ -432,6 +437,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
