--- a/src/html/schoolmanagement_list.html
+++ b/src/html/schoolmanagement_list.html
@@ -26,6 +26,7 @@
 
 
 
+
   <link rel="stylesheet" href="../css/main_xc.css">
 
 
@@ -73,6 +74,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -266,6 +268,7 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
@@ -337,7 +340,7 @@
                         <td>
                           <button class="btn btn-primary" data-toggle="modal" data-target="#yue">增减余额</button>
                           <button class="btn btn-primary" data-toggle="modal" data-target="#quanxian">课程权限</button>
-                          <button class="btn btn-primary">停用账号</button>
+                          <button class="btn btn-primary" data-toggle="modal" data-target="#endUser">停用账号</button>
                           <button class="btn btn-primary" data-toggle="modal" data-target="#edit">修改资料</button>
                           <button class="btn btn-primary jq-reset-pw">重置密码</button>
                         </td>
@@ -568,6 +571,7 @@
 
 
 
+
               </div>
             </div>
           </div>
@@ -581,6 +585,7 @@
       <span>&copy; 2018 - 智厢逢</span>
     </footer>
     <!-- endbuild -->
+
 
 
 
@@ -693,6 +698,40 @@
       </div>
     </div>
   </div>
+  <div id="endUser" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" class="modal fade in">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" data-dismiss="modal" aria-label="Close" class="close">
+              <span aria-hidden="true">×</span>
+            </button>
+            <h4 id="myModalLabel" class="modal-title">停用账号</h4>
+          </div>
+          <div class="modal-body">
+            <p class="xc-error">确认停用该学校账号吗？</p>
+            <p class="xc-error">停用该学校账号，您必须将账号下的学生、教师和班级转移给其他学校</p>
+            <form class="form-horizontal">
+              <div class="form-group">
+                <label class="col-lg-2  control-label">转移给</label>
+                <div class="col-lg-6">
+                  <select name="" id="label" class="form-control" placeholder="请选择学校">
+                    <option value="1">学校1</option>
+                    <option value="2">学校2</option>
+                    <option value="3">学校3</option>
+                    <option value="4">学校4</option>
+                    <option value="5">学校5</option>
+                  </select>
+                </div>
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal" aria-label="Close">取消</button>
+            <button type="button" class="btn btn-primary">保存</button>
+          </div>
+        </div>
+      </div>
+    </div>
   <div id="quanxian" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" class="modal fade in">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -791,6 +830,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
