--- a/src/html/teachermanagement_sales_info.html
+++ b/src/html/teachermanagement_sales_info.html
@@ -20,6 +20,7 @@
   <link rel="stylesheet" href="../css/theme-e.css">
   <!-- endbuild -->
 
+  <link rel="stylesheet" href="../css/main_xc.css">
 
 
 
@@ -70,6 +71,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -245,12 +247,12 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
         <div class="content-heading">
           【教师名】的详细报表
-          <button class="pull-right btn btn-primary" type="button">返回</button>
           <ol class="breadcrumb">
             <li>
               <a href="#">教师管理</a>
@@ -260,6 +262,9 @@
             </li>
             <li class="active">详细报表</li>
           </ol>
+          <div class='mt10 xc-clearfix'>
+              <a href="javascript:history.go(-1)" class="btn btn-primary pull-left">返回</a>
+          </div>
         </div>
         <div class="row">
           <div class="col-xs-12">
@@ -378,6 +383,7 @@
 
 
 
+
               </div>
             </div>
           </div>
@@ -391,6 +397,7 @@
       <span>&copy; 2018 - 智厢逢</span>
     </footer>
     <!-- endbuild -->
+
 
 
 
@@ -414,6 +421,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
