--- a/src/html/48_pronunciation_学发音.html
+++ b/src/html/48_pronunciation_学发音.html
@@ -251,132 +251,218 @@
         <span class="close"></span>
       </div>
       <div class="change_course_details">
-        <table class="change_course_details_table active">
-          <tr>
-            <th>课程名称</th>
-            <th>上次学习日期</th>
-            <th>继续学习</th>
-          </tr>
-          <tr>
-            <td>课程名称</td>
-            <td>一天前</td>
-            <td>
-              <p class="course_list_details_button">
-                <span>学习</span>
-              </p>
-            </td>
-          </tr>
-          <tr>
-            <td>课程名称</td>
-            <td>一天前</td>
-            <td>
-              <p class="course_list_details_button">
-                <span>学习</span>
-              </p>
-            </td>
-          </tr>
-          <tr>
-            <td>课程名称</td>
-            <td>一天前</td>
-            <td>
-              <p class="course_list_details_button">
-                <span>学习</span>
-              </p>
-            </td>
-          </tr>
-          <tr>
-            <td>课程名称</td>
-            <td>一天前</td>
-            <td>
-              <p class="course_list_details_button">
-                <span>学习</span>
-              </p>
-            </td>
-          </tr>
-          <tr>
-            <td>课程名称</td>
-            <td>一天前</td>
-            <td>
-              <p class="course_list_details_button">
-                <span>学习</span>
-              </p>
-            </td>
-          </tr>
-          <tr>
-            <td>课程名称</td>
-            <td>一天前</td>
-            <td>
-              <p class="course_list_details_button">
-                <span>学习</span>
-              </p>
-            </td>
-          </tr>
-          <tr>
-            <td>课程名称</td>
-            <td>一天前</td>
-            <td>
-              <p class="course_list_details_button">
-                <span>学习</span>
-              </p>
-            </td>
-          </tr>
-          <tr>
-            <td>课程名称</td>
-            <td>一天前</td>
-            <td>
-              <p class="course_list_details_button">
-                <span>学习</span>
-              </p>
-            </td>
-          </tr>
-        </table>
-        <table class="change_course_details_table">
-          <tr>
-            <th>课程阶段</th>
-            <th>选择版本</th>
-            <th>课程阶段</th>
-          </tr>
-          <tr>
-            <td>小学英语</td>
-            <td>教材版本</td>
-            <td>第一册（一年级上学期）</td>
-          </tr>
-          <tr>
-            <td>初中英语</td>
-            <td>教材版本</td>
-            <td>第一册（一年级上学期）</td>
-          </tr>
-          <tr>
-            <td>高中英语</td>
-            <td>教材版本</td>
-            <td>第一册（一年级上学期）</td>
-          </tr>
-          <tr>
-            <td></td>
-            <td>教材版本</td>
-            <td>第一册（一年级上学期）</td>
-          </tr>
-          <tr>
-            <td></td>
-            <td>教材版本</td>
-            <td>第一册（一年级上学期）</td>
-          </tr>
-          <tr>
-            <td></td>
-            <td>教材版本</td>
-            <td>第一册（一年级上学期）</td>
-          </tr>
-          <tr>
-            <td></td>
-            <td>教材版本</td>
-            <td>第一册（一年级上学期）</td>
-          </tr>
-          <tr>
-            <td></td>
-            <td>教材版本</td>
-            <td>第一册（一年级上学期）</td>
-          </tr>
-        </table>
+        <div class="change_course_details-list active">
+          <table class="change_course_details_table active">
+            <tr>
+              <th>课程名称</th>
+              <th>上次学习日期</th>
+              <th>继续学习</th>
+            </tr>
+            <tr>
+              <td>课程名称</td>
+              <td>一天前</td>
+              <td>
+                <p class="course_list_details_button">
+                  <span>学习</span>
+                </p>
+              </td>
+            </tr>
+            <tr>
+              <td>课程名称</td>
+              <td>一天前</td>
+              <td>
+                <p class="course_list_details_button">
+                  <span>学习</span>
+                </p>
+              </td>
+            </tr>
+            <tr>
+              <td>课程名称</td>
+              <td>一天前</td>
+              <td>
+                <p class="course_list_details_button">
+                  <span>学习</span>
+                </p>
+              </td>
+            </tr>
+            <tr>
+              <td>课程名称</td>
+              <td>一天前</td>
+              <td>
+                <p class="course_list_details_button">
+                  <span>学习</span>
+                </p>
+              </td>
+            </tr>
+            <tr>
+              <td>课程名称</td>
+              <td>一天前</td>
+              <td>
+                <p class="course_list_details_button">
+                  <span>学习</span>
+                </p>
+              </td>
+            </tr>
+            <tr>
+              <td>课程名称</td>
+              <td>一天前</td>
+              <td>
+                <p class="course_list_details_button">
+                  <span>学习</span>
+                </p>
+              </td>
+            </tr>
+            <tr>
+              <td>课程名称</td>
+              <td>一天前</td>
+              <td>
+                <p class="course_list_details_button">
+                  <span>学习</span>
+                </p>
+              </td>
+            </tr>
+            <tr>
+              <td>课程名称</td>
+              <td>一天前</td>
+              <td>
+                <p class="course_list_details_button">
+                  <span>学习</span>
+                </p>
+              </td>
+            </tr>
+          </table>
+        </div>
+        <div class="change_course_details-list ">
+          <table class="change_course_details_table xc-details_table xc-33">
+            <tr>
+              <th>课程阶段</th>
+            </tr>
+            <tr class="xc-table-list active">
+              <td>小学英语</td>
+            </tr>
+            <tr class="xc-table-list">
+              <td>初中英语</td>
+            </tr>
+            <tr class="xc-table-list">
+              <td>高中英语</td>
+            </tr>
+          </table>
+          <table class="change_course_details_table xc-details_table xc-66 active">
+            <tr>
+              <th>选择版本（小学英语）</th>
+              <th>课程阶段</th>
+            </tr>
+            <tr>
+              <td>教材版本</td>
+              <td>第一册（一年级上学期）</td>
+            </tr>
+            <tr>
+              <td>教材版本</td>
+              <td>第一册（一年级上学期）</td>
+            </tr>
+            <tr>
+              <td>教材版本</td>
+              <td>第一册（一年级上学期）</td>
+            </tr>
+            <tr>
+              <td>教材版本</td>
+              <td>第一册（一年级上学期）</td>
+            </tr>
+            <tr>
+              <td>教材版本</td>
+              <td>第一册（一年级上学期）</td>
+            </tr>
+            <tr>
+              <td>教材版本</td>
+              <td>第一册（一年级上学期）</td>
+            </tr>
+            <tr>
+              <td>教材版本</td>
+              <td>第一册（一年级上学期）</td>
+            </tr>
+            <tr>
+              <td>教材版本</td>
+              <td>第一册（一年级上学期）</td>
+            </tr>
+          </table>
+          <table class="change_course_details_table xc-details_table xc-66">
+              <tr>
+                <th>选择版本(初中英语)</th>
+                <th>课程阶段</th>
+              </tr>
+              <tr>
+                <td>教材版本</td>
+                <td>第一册（一年级上学期）</td>
+              </tr>
+              <tr>
+                <td>教材版本</td>
+                <td>第一册（一年级上学期）</td>
+              </tr>
+              <tr>
+                <td>教材版本</td>
+                <td>第一册（一年级上学期）</td>
+              </tr>
+              <tr>
+                <td>教材版本</td>
+                <td>第一册（一年级上学期）</td>
+              </tr>
+              <tr>
+                <td>教材版本</td>
+                <td>第一册（一年级上学期）</td>
+              </tr>
+              <tr>
+                <td>教材版本</td>
+                <td>第一册（一年级上学期）</td>
+              </tr>
+              <tr>
+                <td>教材版本</td>
+                <td>第一册（一年级上学期）</td>
+              </tr>
+              <tr>
+                <td>教材版本</td>
+                <td>第一册（一年级上学期）</td>
+              </tr>
+            </table>
+            <table class="change_course_details_table xc-details_table xc-66">
+                <tr>
+                  <th>选择版本(高中英语)</th>
+                  <th>课程阶段</th>
+                </tr>
+                <tr>
+                  <td>教材版本</td>
+                  <td>第一册（一年级上学期）</td>
+                </tr>
+                <tr>
+                  <td>教材版本</td>
+                  <td>第一册（一年级上学期）</td>
+                </tr>
+                <tr>
+                  <td>教材版本</td>
+                  <td>第一册（一年级上学期）</td>
+                </tr>
+                <tr>
+                  <td>教材版本</td>
+                  <td>第一册（一年级上学期）</td>
+                </tr>
+                <tr>
+                  <td>教材版本</td>
+                  <td>第一册（一年级上学期）</td>
+                </tr>
+                <tr>
+                  <td>教材版本</td>
+                  <td>第一册（一年级上学期）</td>
+                </tr>
+                <tr>
+                  <td>教材版本</td>
+                  <td>第一册（一年级上学期）</td>
+                </tr>
+                <tr>
+                  <td>教材版本</td>
+                  <td>第一册（一年级上学期）</td>
+                </tr>
+              </table>
+        </div>
+
       </div>
     </div>
   </div>
@@ -403,7 +489,7 @@
 
 
   <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
-  <script src="../js/main_momo.js"></script>
+  <!-- <script src="../js/main_momo.js"></script> -->
   <script src="../js/main_xc.js"></script>
 </body>
 
