--- a/src/html/schoolmanagement_sales.html
+++ b/src/html/schoolmanagement_sales.html
@@ -20,6 +20,7 @@
   <link rel="stylesheet" href="../css/theme-e.css">
   <!-- endbuild -->
 
+  <link rel="stylesheet" href="../css/main_xc.css">
 
 
 
@@ -75,6 +76,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -270,6 +272,7 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
@@ -279,6 +282,9 @@
               <li><a href="./schoolmanagement_list.html">学校管理</a></li>
               <li class="active">销售数据</li>
             </ol>
+            <div class='mt10 xc-clearfix'>
+                <a href="javascript:history.go(-1)" class="btn btn-primary pull-left">返回</a>
+            </div>
         </div>
         <div class="row">
           <div class="col-xs-12">
@@ -589,6 +595,7 @@
 
 
 
+
               </div>
             </div>
           </div>
@@ -602,6 +609,7 @@
       <span>&copy; 2018 - 智厢逢</span>
     </footer>
     <!-- endbuild -->
+
 
 
 
@@ -638,6 +646,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
