--- a/src/html/schoolmanagement_setting.html
+++ b/src/html/schoolmanagement_setting.html
@@ -26,6 +26,7 @@
 
 
 
+
   <link rel="stylesheet" href="../css/main_xc.css">
 
 
@@ -72,6 +73,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -251,11 +253,15 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
         <div class="content-heading">
           扣费设置
+          <div class='mt10 xc-clearfix'>
+              <a href="javascript:history.go(-1)" class="btn btn-primary pull-left">返回</a>
+          </div>
         </div>
         <div class="row">
           <div class="col-xs-12">
@@ -456,6 +462,7 @@
 
 
 
+
   </div>
 
   <!-- build:js -->
@@ -472,6 +479,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
