--- a/src/html/teachermanagement_list.html
+++ b/src/html/teachermanagement_list.html
@@ -26,6 +26,7 @@
 
 
 
+
   <link rel="stylesheet" href="../css/main_xc.css">
 
 
@@ -72,6 +73,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -251,11 +253,15 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
         <div class="content-heading">
           教师列表
+          <div class='mt10 xc-clearfix'>
+              <a href="javascript:history.go(-1)" class="btn btn-primary pull-left">返回</a>
+          </div>
         </div>
         <div class="row">
           <div class="col-xs-12">
@@ -424,6 +430,7 @@
 
 
 
+
               </div>
             </div>
           </div>
@@ -437,6 +444,7 @@
       <span>&copy; 2018 - 智厢逢</span>
     </footer>
     <!-- endbuild -->
+
 
 
 
@@ -465,6 +473,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
