--- a/src/html/teachermanagement_sales.html
+++ b/src/html/teachermanagement_sales.html
@@ -19,6 +19,7 @@
   <link rel="stylesheet" href="../css/app.css" id="maincss">
   <link rel="stylesheet" href="../css/theme-e.css">
   <!-- endbuild -->
+
   <link rel="stylesheet" href="../css/main_xc.css">
 
 
@@ -71,6 +72,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -248,11 +250,15 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
         <div class="content-heading">
           销售数据
+          <div class='mt10 xc-clearfix'>
+              <a href="javascript:history.go(-1)" class="btn btn-primary pull-left">返回</a>
+          </div>
         </div>
         <div class="row">
           <div class="col-xs-12">
@@ -397,6 +403,7 @@
 
 
 
+
               </div>
             </div>
           </div>
@@ -410,6 +417,7 @@
       <span>&copy; 2018 - 智厢逢</span>
     </footer>
     <!-- endbuild -->
+
 
 
 
@@ -437,6 +445,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
