--- a/src/html/schoolmanagement_list.html
+++ b/src/html/schoolmanagement_list.html
@@ -28,6 +28,7 @@
 
 
 
+
   <link rel="stylesheet" href="../css/main_xc.css">
 
 
@@ -75,6 +76,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -251,6 +253,7 @@
   </div>
 </aside>
     <!-- endbuild -->
+
 
 
 
@@ -579,6 +582,7 @@
 
 
 
+
               </div>
             </div>
           </div>
@@ -613,9 +617,10 @@
 
 
 
+
   </div>
   <div id="edit" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" class="modal fade in">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-lg">
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" data-dismiss="modal" aria-label="Close" class="close">
@@ -626,34 +631,29 @@
         <div class="modal-body">
           <form class="form-horizontal">
             <div class="form-group">
-              <label class="col-lg-1 col-lg-offset-3 control-label" style="min-width: 100px;">学校名称</label>
+              <label class="col-lg-1 control-label" style="min-width: 100px;">学校名称</label>
               <div class="col-lg-5">
                 <input type="text" placeholder="请输入学校名称" class="form-control">
               </div>
             </div>
             <div class="form-group">
-              <label class="col-lg-1 col-lg-offset-3 control-label" style="min-width: 100px;">校长姓名</label>
+              <label class="col-lg-1 control-label" style="min-width: 100px;">校长姓名</label>
               <div class="col-lg-5">
                 <input type="text" placeholder="请输入校长姓名" class="form-control">
               </div>
             </div>
             <div class="form-group">
-              <label class="col-lg-1 col-lg-offset-3 control-label" style="min-width: 100px;">校长手机</label>
+              <label class="col-lg-1 control-label" style="min-width: 100px;">校长手机</label>
               <div class="col-lg-5">
                 <input type="text" placeholder="请输入校长手机" class="form-control">
               </div>
             </div>
+            <div class="province-item-1 form-group">
+            </div>
             <div class="form-group">
-              <label class="col-lg-1 col-lg-offset-3 control-label" style="min-width: 100px;">设置辖区</label>
+              <label class="col-lg-1 control-label" style="min-width: 100px;"></label>
               <div class="col-lg-5">
-                <select name="" id="label" class="form-control">
-                  <option value="">浙江省 / 杭州市/ 西湖区</option>
-                  <option value="1">1</option>
-                  <option value="2">2</option>
-                  <option value="3">3</option>
-                  <option value="4">4</option>
-                  <option value="5">5</option>
-                </select>
+                <a class="btn btn-primary jq-add-xiaqu" href="javascript:void(0);">添加辖区</a>
               </div>
             </div>
           </form>
@@ -836,6 +836,8 @@
   <script src="../js/vendor/sweetalert/dist/sweetalert.min.js"></script>
   <script src="../js/vendor/moment/min/moment-with-locales.min.js"></script>
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
+  <script type="text/javascript" src="../js/jquery.provincesCity.js"></script>
+  <script type="text/javascript" src="../js/provincesData.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
 
@@ -845,8 +847,8 @@
 
 
 
-  <script src="../js/schoolmanagement.js"></script>
 
+  <script src="../js/schoolmanagement.js"></script>
 
 
 
