--- a/src/html/06_shopping.html
+++ b/src/html/06_shopping.html
@@ -349,10 +349,22 @@
     </div>
   </div>
   <!-- build:foot -->
-  <footer>
-      <span>&copy; 2018 - 智厢逢</span>
-    </footer>
+  <!-- 底部 -->
+  <div class="footer">
+    <div class="footer-ct">
+      <div class="tel-wp">
+        <img src="../img/logo.png" alt="" class="logo">
+        <img src="../img/tel.png" alt="" class="foot-tel">021-00000000
+      </div>
+      <p class="ads-wp">
+        <span class="name">上海XXXXXXXXXXXXXXXXXXX有限公司</span>
+        <span class="ads">地址：上海XXXXXXXXXXXXXXXXXXX</span>
+      </p>
+      <p class="record">智厢逢智能英语版权所有 © 备案号备案号备案号备案号</p>
+    </div>
+  </div>
   <!-- endbuild -->
+
 
 
 
