--- a/src/html/07_personal_data.html
+++ b/src/html/07_personal_data.html
@@ -143,14 +143,7 @@
               </div>
               <div class="change-detail-item">
                 <div class="change-detail-name">所在地区：</div>
-                <div class="detail-select2">
-                  <select name="" id="" class="prov" provinceId='110000'>
-                    <option value=""></option>
-                  </select>
-                  /&nbsp;&nbsp;
-                  <select name="" id="" class="city" cityId='110001'>
-                    <option value=""></option>
-                  </select>
+                <div class="detail-select2" province='上海' city='青浦'>
                 </div>
               </div>
               <div class="change-detail-item">
@@ -201,9 +194,20 @@
   </div>
   </div>
   <!-- build:foot -->
-  <footer>
-      <span>&copy; 2018 - 智厢逢</span>
-    </footer>
+  <!-- 底部 -->
+  <div class="footer">
+    <div class="footer-ct">
+      <div class="tel-wp">
+        <img src="../img/logo.png" alt="" class="logo">
+        <img src="../img/tel.png" alt="" class="foot-tel">021-00000000
+      </div>
+      <p class="ads-wp">
+        <span class="name">上海XXXXXXXXXXXXXXXXXXX有限公司</span>
+        <span class="ads">地址：上海XXXXXXXXXXXXXXXXXXX</span>
+      </p>
+      <p class="record">智厢逢智能英语版权所有 © 备案号备案号备案号备案号</p>
+    </div>
+  </div>
   <!-- endbuild -->
 
 
@@ -211,13 +215,16 @@
 
 
 
+
   <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+  <script src="../js/provincesData.js"></script>
   <script src="../js/cityselect.js"></script>
   <script src="../js/parsley.min.js"></script>
   <script src="../js/main_linye.js"></script>
   <script type="text/javascript">
     $(function () {
       $('#form').parsley();//调用parsley表单验证插件
+      $(".detail-select2").ProvinceCity();
     });
   </script>
 </body>
