--- a/src/html/11_task.html
+++ b/src/html/11_task.html
@@ -25,43 +25,49 @@
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
   <!-- build:head -->
-  <header class="topnavbar-wrapper">
-      <nav role="navigation" class="navbar topnavbar">
-        <div class="navbar-header">
-          <a href="#/" class="navbar-brand">
-            <div class="brand-logo">
-              <img src="../img/logo.png" alt="App Logo" class="img-responsive">
-            </div>
-            <div class="brand-logo-collapsed">
-              <img src="../img/logo-single.png" alt="App Logo" class="img-responsive">
-            </div>
-          </a>
-        </div>
-        <div class="nav-wrapper">
-          <ul class="nav navbar-nav">
-            <li>
-              <a href="#" data-toggle-state="aside-collapsed" class="hidden-xs">
-                <em class="fa fa-navicon"></em>
-              </a>
-              <a href="#" data-toggle-state="aside-toggled" data-no-persist="true" class="visible-xs sidebar-toggle">
-                <em class="fa fa-navicon"></em>
-              </a>
-            </li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right mu-head-user">
-            <li>
-              <span><i class="fa fa-user"></i>admin</span><span>|</span>
-            </li>
-            <li>
-              <a href="#">
-                退出
-              </a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-    </header>
+  <header class="comm-header">
+  <div class="midd_header clearfix">
+    <div class="index_icon">
+      <a href="index.html"></a>
+    </div>
+    <ul class="nav clearfix">
+      <li class="active">
+        <a href="#">课程中心</a>
+      </li>
+      <li>
+        <a href="#">我的班级</a>
+      </li>
+      <li>
+        <a href="#">排行榜</a>
+      </li>
+      <li>
+        <a href="#">学币商城</a>
+      </li>
+    </ul>
+    <div class="login">
+      <a href="#">个人中心</a>
+      <ul class="head-list">
+        <li>
+          <a class="info" href='javascript:;'>个人资料</a>
+        </li>
+        <li>
+          <a class="honor" href='javascript:;'>荣誉中心</a>
+        </li>
+        <li>
+          <a class='test'href='javascript:;'>测试记录</a>
+        </li>
+        <li>
+          <a class="task" href='javascript:;'>我的任务</a>
+        </li>
+        <li>
+          <a class="logout" href='javascript:;'>退出登录</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</header>
   <!-- endbuild -->
+
 
 
 
@@ -144,10 +150,22 @@
     </div>
   </div>
   <!-- build:foot -->
-  <footer>
-      <span>&copy; 2018 - 智厢逢</span>
-    </footer>
+  <!-- 底部 -->
+  <div class="footer">
+    <div class="footer-ct">
+      <div class="tel-wp">
+        <img src="../img/logo.png" alt="" class="logo">
+        <img src="../img/tel.png" alt="" class="foot-tel">021-00000000
+      </div>
+      <p class="ads-wp">
+        <span class="name">上海XXXXXXXXXXXXXXXXXXX有限公司</span>
+        <span class="ads">地址：上海XXXXXXXXXXXXXXXXXXX</span>
+      </p>
+      <p class="record">智厢逢智能英语版权所有 © 备案号备案号备案号备案号</p>
+    </div>
+  </div>
   <!-- endbuild -->
+
 
 
 
